--- a/sites/all/themes/semi/css/semi.css
+++ b/sites/all/themes/semi/css/semi.css
@@ -1,3 +1,37 @@
-temp-display-block {
+.temp-display-block {
   display: none;
+}
+
+#top #block-menu-menu-top-one-menu ul.nav.menu > li {
+    float: left;
+}
+
+header[role="banner"] {
+    background: none repeat scroll 0 0 #000;
+}
+header.navbar[role="banner"] {
+    background: initial;
+}
+
+#top #block-menu-menu-top-one-menu ul.nav.menu > li.first {
+    float: left;
+}
+#top #block-menu-menu-top-one-menu ul.nav.menu > li {
+    float: right;
+}
+#top #block-menu-menu-top-one-menu ul.nav.menu > li > a {
+    color: white;
+}
+
+
+#top-banner .block {
+    color: #000;
+/*    position: absolute; */
+    text-align: left;
+}
+#top-banner #block-menu-menu-market-info-menu ul.nav.menu > li {
+    float: right;
+}
+#top-banner {
+    position: absolute;
 }
